--- a/.github/workflows/evm.yml
+++ b/.github/workflows/evm.yml
@@ -23,14 +23,14 @@ jobs:
           version: nightly
 
       - name: Run Forge build
-        working-directory: ./evm
+        working-directory: evm
         run: |
           forge --version
           forge build --sizes
         id: build
 
       - name: Run Forge tests
-        working-directory: ./evm
+        working-directory: evm
         run: |
           forge test -vvv
         id: test
