--- a/.github/workflows/svm.yml
+++ b/.github/workflows/svm.yml
@@ -9,7 +9,7 @@ jobs:
     runs-on: ubuntu-latest
     defaults:
       run:
-        working-directory: ./svm
+        working-directory: svm
     steps:
       - uses: actions/checkout@v4
       - name: Get solana version
@@ -22,10 +22,11 @@ jobs:
         run: |
           ANCHOR_VERSION="$(awk '/anchor_version =/ { print substr($3, 2, length($3)-2) }' Anchor.toml)"
           echo "::set-output name=version::${ANCHOR_VERSION}"
-      - uses: metadaoproject/anchor-test@c47c46486d1a62b0b22419163d7f7bfae570c390
+      - uses: evan-gray/anchor-test@24c04ecece7b484fa1218bab4318818b36436005
         with:
           anchor-version: "${{steps.anchor.outputs.version}}"
           solana-cli-version: "${{steps.solana.outputs.version}}"
+          working-directory: "svm"
 
       - run: cargo fmt --check --all
       - run: cargo clippy
