--- a/.github/workflows/format.yml
+++ b/.github/workflows/format.yml
@@ -24,3 +24,15 @@ jobs:
       - name: Run Forge format
         working-directory: evm
         run: forge fmt --check
+  spellcheck:
+    runs-on: ubuntu-latest
+    steps:
+      - uses: actions/checkout@v4
+      # Pinned version of the v6 tag, which is a lightweight and hence mutable tag
+      - uses: streetsidesoftware/cspell-action@214db1e3138f326d33b7a6a51c92852e89ab0618
+        with:
+          # For now, only lint markdown files
+          files: "**/*.md"
+          inline: warning
+          # Only check files in the PR or push
+          incremental_files_only: true
