--- a/.vscode/extensions.json
+++ b/.vscode/extensions.json
@@ -6,7 +6,8 @@
   "recommendations": [
     "esbenp.prettier-vscode",
     "JuanBlanco.solidity",
-    "rust-lang.rust-analyzer"
+    "rust-lang.rust-analyzer",
+    "streetsidesoftware.code-spell-checker"
   ],
   // List of extensions recommended by VS Code that should not be recommended for users of this workspace.
   "unwantedRecommendations": []
