ci: update evm CI to latest forge init

--- a/.github/workflows/evm.yml
+++ b/.github/workflows/evm.yml
@@ -12,6 +12,9 @@ jobs:
 
     name: Foundry project
     runs-on: ubuntu-latest
+    defaults:
+      run:
+        working-directory: evm
     steps:
       - uses: actions/checkout@v4
         with:
@@ -22,15 +25,21 @@ jobs:
         with:
           version: nightly
 
-      - name: Run Forge build
-        working-directory: evm
+      - name: Show Forge version
         run: |
           forge --version
+
+      - name: Run Forge fmt
+        run: |
+          forge fmt --check
+        id: fmt
+
+      - name: Run Forge build
+        run: |
           forge build --sizes
         id: build
 
       - name: Run Forge tests
-        working-directory: evm
         run: |
           forge test -vvv
         id: test
